add Test class to start LSP outside the IDE